--- a/docker/httpd/data/base.conf
+++ b/docker/httpd/data/base.conf
@@ -6,6 +6,9 @@ DocumentRoot /usr/local/apache2/htdocs/client
 RewriteEngine on
 # RewriteRule ^(.*)$ https://SERVER_NAME/ [R=301,L]
 
+TimeOut 600
+ProxyTimeout 600
+
 ProxyPreserveHost On
 ProxyPass  /api     http://bob:8080/api
 ProxyPassReverse   /api      http://bob:8080/api
