--- a/docker/httpd/data/ssl.conf
+++ b/docker/httpd/data/ssl.conf
@@ -5,6 +5,10 @@ DocumentRoot /usr/local/apache2/htdocs/client
 
 RewriteEngine On
 
+TimeOut 600
+ProxyTimeout 600
+SSLSessionCacheTimeout 600
+
 ProxyPreserveHost On
 ProxyPass  /api     http://bob:8080/api
 ProxyPassReverse   /api      http://bob:8080/api
