--- a/bob-service-fetcher-impl/pom.xml
+++ b/bob-service-fetcher-impl/pom.xml
@@ -23,6 +23,7 @@
             <groupId>com.dnastack</groupId>
             <artifactId>bob-service-fetcher-api</artifactId>
             <version>${project.version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
@@ -42,6 +43,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
