--- a/bob-service-requester-impl/pom.xml
+++ b/bob-service-requester-impl/pom.xml
@@ -23,6 +23,7 @@
             <groupId>com.dnastack</groupId>
             <artifactId>bob-service-requester-api</artifactId>
             <version>${project.version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
