--- a/bob-data-impl/pom.xml
+++ b/bob-data-impl/pom.xml
@@ -25,6 +25,7 @@
             <groupId>com.dnastack</groupId>
             <artifactId>bob-data-api</artifactId>
             <version>${project.version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
@@ -39,6 +40,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
