--- a/bob-rest-api/pom.xml
+++ b/bob-rest-api/pom.xml
@@ -16,6 +16,7 @@
             <groupId>com.dnastack</groupId>
             <artifactId>bob-service-api</artifactId>
             <version>${project.version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
@@ -30,10 +31,12 @@
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.moxy</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxb-provider</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
