--- a/bob-service-mapper-api/pom.xml
+++ b/bob-service-mapper-api/pom.xml
@@ -16,6 +16,7 @@
             <groupId>com.dnastack</groupId>
             <artifactId>bob-data-api</artifactId>
             <version>${project.version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
