--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
         <version.guava>18.0</version.guava>
         <version.log4j>1.2.16</version.log4j>
         <version.lombok>1.14.8</version.lombok>
-        <version.swagger>1.5.4</version.swagger>
+        <version.swagger.core>1.5.4</version.swagger.core>
         <version.war.plugin>2.3</version.war.plugin>
         <version.surefire.plugin>2.17</version.surefire.plugin>
         <version.compiler.plugin>2.3.2</version.compiler.plugin>
@@ -94,6 +94,7 @@
         <version.wildfly.arquillian.plugin>8.2.1.Final</version.wildfly.arquillian.plugin>
         <version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
         <version.lombok.plugin>1.14.8.0</version.lombok.plugin>
+        <version.swagger.maven.plugin>3.1.3</version.swagger.maven.plugin>
         <version.tools>1.4.2</version.tools>
         <path.tools>${java.home}/../lib/tools.jar</path.tools>
     </properties>
@@ -131,12 +132,6 @@
                 <artifactId>lombok</artifactId>
                 <version>${version.lombok}</version>
                 <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>io.swagger</groupId>
-                <artifactId>swagger-jaxrs</artifactId>
-                <version>${version.swagger}</version>
-                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>org.jboss.arquillian.extension</groupId>
@@ -184,11 +179,6 @@
                 <version>${version.org.json.json}</version>
             </dependency>
             <dependency>
-                <groupId>org.webjars</groupId>
-                <artifactId>swagger-ui</artifactId>
-                <version>${version.swagger}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.eclipse.persistence</groupId>
                 <artifactId>org.eclipse.persistence.moxy</artifactId>
                 <version>${version.eclipselink}</version>
@@ -210,6 +200,12 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-core</artifactId>
+                <scope>compile</scope>
+                <version>${version.swagger.core}</version>
+            </dependency>
+            <dependency>
                 <!--sun jdk-->
                 <groupId>com.sun</groupId>
                 <artifactId>tools</artifactId>
@@ -228,8 +224,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${version.compiler.plugin}</version>
                     <configuration>
-                        <source>${maven.compiler.source}</source>
-                        <target>${maven.compiler.target}</target>
+                        <source>1.8</source>
+                        <target>1.8</target>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -292,6 +288,11 @@
                     <groupId>org.projectlombok</groupId>
                     <artifactId>lombok-maven-plugin</artifactId>
                     <version>${version.lombok.plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.github.kongchen</groupId>
+                    <artifactId>swagger-maven-plugin</artifactId>
+                    <version>${version.swagger.maven.plugin}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
