--- a/pom.xml
+++ b/pom.xml
@@ -82,19 +82,24 @@
         <version.log4j>1.2.16</version.log4j>
         <version.lombok>1.14.8</version.lombok>
         <version.swagger.core>1.5.4</version.swagger.core>
+        <version.swagger.hibernate.validations>1.5.6</version.swagger.hibernate.validations>
+        <version.asciidoctorj-pdf>1.5.0-alpha.11</version.asciidoctorj-pdf>
         <version.war.plugin>2.3</version.war.plugin>
         <version.surefire.plugin>2.17</version.surefire.plugin>
         <version.compiler.plugin>2.3.2</version.compiler.plugin>
         <version.jaxb.plugin>2.1</version.jaxb.plugin>
         <version.jar.plugin>2.2</version.jar.plugin>
         <version.exec.plugin>1.2.1</version.exec.plugin>
+        <version.resources.plugin>2.7</version.resources.plugin>
         <version.deploy.plugin>2.8</version.deploy.plugin>
         <version.install.plugin>2.3.1</version.install.plugin>
         <version.ejb.plugin>2.5.1</version.ejb.plugin>
         <version.wildfly.arquillian.plugin>8.2.1.Final</version.wildfly.arquillian.plugin>
-        <version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
+        <version.wildfly.plugin>1.0.2.Final</version.wildfly.plugin>
         <version.lombok.plugin>1.14.8.0</version.lombok.plugin>
-        <version.swagger.maven.plugin>3.1.3</version.swagger.maven.plugin>
+        <version.swagger.plugin>3.1.3</version.swagger.plugin>
+        <version.swagger2markup.plugin>0.9.3</version.swagger2markup.plugin>
+        <version.asciidoctor.plugin>1.5.3</version.asciidoctor.plugin>
         <version.tools>1.4.2</version.tools>
         <path.tools>${java.home}/../lib/tools.jar</path.tools>
     </properties>
@@ -206,6 +211,16 @@
                 <version>${version.swagger.core}</version>
             </dependency>
             <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-hibernate-validations</artifactId>
+                <version>${version.swagger.hibernate.validations}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctorj-pdf</artifactId>
+                <version>${version.asciidoctorj-pdf}</version>
+            </dependency>
+            <dependency>
                 <!--sun jdk-->
                 <groupId>com.sun</groupId>
                 <artifactId>tools</artifactId>
@@ -260,6 +275,11 @@
                     <version>${version.jar.plugin}</version>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>${version.resources.plugin}</version>
+                </plugin>
+                <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
                     <version>${version.exec.plugin}</version>
@@ -267,7 +287,7 @@
                 <plugin>
                     <groupId>org.wildfly.plugins</groupId>
                     <artifactId>wildfly-maven-plugin</artifactId>
-                    <version>${version.wildfly.maven.plugin}</version>
+                    <version>${version.wildfly.plugin}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.wildfly</groupId>
@@ -292,7 +312,17 @@
                 <plugin>
                     <groupId>com.github.kongchen</groupId>
                     <artifactId>swagger-maven-plugin</artifactId>
-                    <version>${version.swagger.maven.plugin}</version>
+                    <version>${version.swagger.plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>io.github.robwin</groupId>
+                    <artifactId>swagger2markup-maven-plugin</artifactId>
+                    <version>${version.swagger2markup.plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.asciidoctor</groupId>
+                    <artifactId>asciidoctor-maven-plugin</artifactId>
+                    <version>${version.asciidoctor.plugin}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -300,7 +330,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
