--- a/docker/httpd/data/base.conf
+++ b/docker/httpd/data/base.conf
@@ -3,6 +3,8 @@ ServerName SERVER_NAME
 ServerAlias www.SERVER_NAME
 DocumentRoot /usr/local/apache2/htdocs/client
 
+# Header set Access-Control-Allow-Origin "*"
+
 RewriteEngine on
 # RewriteRule ^(.*)$ https://SERVER_NAME/ [R=301,L]
 
