--- a/docker/httpd/data/ssl.conf
+++ b/docker/httpd/data/ssl.conf
@@ -3,6 +3,8 @@ ServerName SERVER_NAME
 ServerAlias www.SERVER_NAME
 DocumentRoot /usr/local/apache2/htdocs/client
 
+# Header set Access-Control-Allow-Origin "*"
+
 RewriteEngine On
 
 TimeOut 600
