fixed #22 using rest-assured, removed explicit JSON parsing in tests, switched from Log4j to java.util.logging, fixed URL parameter encoding in tests

--- a/bob-data-api/pom.xml
+++ b/bob-data-api/pom.xml
@@ -32,6 +32,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
             <scope>provided</scope>
