--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
         <version.arquillian.bom>1.1.8.Final</version.arquillian.bom>
         <version.arquillian.persistence>1.0.0.Alpha7</version.arquillian.persistence>
         <version.arquillian.transaction>1.0.1.Final</version.arquillian.transaction>
+        <version.restassured>2.9.0</version.restassured>
         <version.assertj>2.0.0</version.assertj>
         <version.junit>4.12</version.junit>
         <version.hamcrest>1.3</version.hamcrest>
@@ -79,7 +80,6 @@
         <version.eclipselink>2.6.0</version.eclipselink>
         <version.xmlrpc-client>3.1.3</version.xmlrpc-client>
         <version.guava>18.0</version.guava>
-        <version.log4j>1.2.16</version.log4j>
         <version.lombok>1.14.8</version.lombok>
         <version.swagger.core>1.5.4</version.swagger.core>
         <version.swagger.hibernate.validations>1.5.6</version.swagger.hibernate.validations>
@@ -169,14 +169,15 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
+                <groupId>com.jayway.restassured</groupId>
+                <artifactId>rest-assured</artifactId>
+                <version>${version.restassured}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
                 <version>${version.org.apache.httpcomponents.httpclient}</version>
-            </dependency>
-            <dependency>
-                <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
-                <version>${version.log4j}</version>
             </dependency>
             <dependency>
                 <groupId>org.json</groupId>
