--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
         <version.swagger.plugin>3.1.3</version.swagger.plugin>
         <version.swagger2markup.plugin>0.9.3</version.swagger2markup.plugin>
         <version.asciidoctor.plugin>1.5.3</version.asciidoctor.plugin>
+        <version.jrebel.plugin>1.1.5</version.jrebel.plugin>
         <version.tools>1.4.2</version.tools>
         <path.tools>${java.home}/../lib/tools.jar</path.tools>
     </properties>
@@ -325,6 +326,11 @@
                     <artifactId>asciidoctor-maven-plugin</artifactId>
                     <version>${version.asciidoctor.plugin}</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.zeroturnaround</groupId>
+                    <artifactId>jrebel-maven-plugin</artifactId>
+                    <version>${version.jrebel.plugin}</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -335,6 +341,19 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.zeroturnaround</groupId>
+                <artifactId>jrebel-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>generate-rebel-xml</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
